--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,8 +13,7 @@
        android:protectionLevel="signature"/>
 
 	<uses-permission android:name="com.licryle.veliby.permission.MAPS_RECEIVE"/>
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
@@ -44,9 +43,10 @@
             </intent-filter>
         </activity>
         
-	    <meta-data
+      <service android:name=".DownloadService"/>
+
+      <meta-data
 	        android:name="com.google.android.maps.v2.API_KEY"
 	        android:value="AIzaSyCTL_7B0sdMYQtFSu2Zkn-EoFxJJDMfrzk" />
     </application>
-
 </manifest>
