--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
   <uses-sdk
-      android:minSdkVersion="9"
+      android:minSdkVersion="7"
       android:targetSdkVersion="14" />
     
   <permission
@@ -35,6 +35,7 @@
       <activity
           android:name="com.licryle.veliby.MapsActivity"
           android:configChanges="orientation|keyboardHidden|screenSize"
+          android:theme="@style/Theme.AppCompat.Light"
           android:label="@string/app_name" >
           <intent-filter>
               <action android:name="android.intent.action.MAIN" />
