--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-18
 android.library.reference.1=../../dev/android-sdk/extras/android/support/v7/appcompat
 android.library.reference.2=../google-play-services_lib
+android.library.reference.3=../android-support-cyrille-widgets
