--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,7 +44,7 @@
           </intent-filter>
       </activity>
         
-      <service android:name="com.licryle.veliby.BikeMap.DownloadStationsService"/>
+      <service android:name="com.licryle.veliby.BikeMap.StationsInfoService"/>
 
       <meta-data
 	        android:name="com.google.android.maps.v2.API_KEY"
