--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MapsActivity</name>
+	<name>Veliby</name>
 	<comment></comment>
 	<projects>
 		<project>android-support-v7-appcompat</project>
