--- a/veliby/src/main/AndroidManifest.xml
+++ b/veliby/src/main/AndroidManifest.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.licryle.veliby"
-    android:versionCode="18"
-    android:versionName="1.5" >
+    android:versionCode="28"
+    android:versionName="2.0.3" >
 
   <uses-sdk
-      android:minSdkVersion="8"
+      android:minSdkVersion="9"
       android:targetSdkVersion="14" />
     
   <permission
       android:name="com.licryle.veliby.permission.MAPS_RECEIVE"
       android:protectionLevel="signature"/>
 
-	<uses-permission android:name="com.licryle.veliby.permission.MAPS_RECEIVE"/>
+  <uses-permission android:name="com.licryle.veliby.permission.MAPS_RECEIVE"/>
   <uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-	<!-- The following two permissions are not required to use
-	     Google Maps Android API v2, but are recommended. -->
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	
-	<uses-feature
-      android:glEsVersion="0x00020000"
-      android:required="true"/>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+  <!-- The following two permissions are not required to use
+     Google Maps Android API v2, but are recommended. -->
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+  <uses-feature
+    android:glEsVersion="0x00020000"
+    android:required="true"/>
 
   <application
       android:allowBackup="true"
       android:icon="@drawable/ic_launcher"
       android:label="@string/app_name"
       android:theme="@style/AppTheme" >
+
       <activity
           android:name="com.licryle.veliby.MapsActivity"
           android:configChanges="orientation|keyboardHidden|screenSize"
@@ -40,26 +41,28 @@
               <action android:name="android.intent.action.MAIN" />
 
               <category android:name="android.intent.category.LAUNCHER" />
+              <category android:name="android.intent.category.DEFAULT" />
           </intent-filter>
       </activity>
         
-      <service android:name="com.licryle.veliby.BikeMap.StationsInfoService"/>
+      <service android:name=".StationsInfoService"/>
 
+      <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
       <meta-data
 	        android:name="com.google.android.maps.v2.API_KEY"
-	        android:value="AIzaSyCTL_7B0sdMYQtFSu2Zkn-EoFxJJDMfrzk" />
+	        android:value="" />
 
-		  <receiver android:name="com.licryle.veliby.FavStationWidget.Provider" >
-		    <intent-filter>
-		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-		        <action android:name="com.licryle.veliby.favstationwidget.WIDGET_UPDATE" />
-		    </intent-filter>
-		    <meta-data android:name="android.appwidget.provider"
-		               android:resource="@xml/widget_favstations" />
+      <receiver android:name="com.licryle.veliby.FavStationWidget.Provider" >
+        <intent-filter>
+            <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            <action android:name="com.licryle.veliby.favstationwidget.WIDGET_UPDATE" />
+        </intent-filter>
+        <meta-data android:name="android.appwidget.provider"
+                   android:resource="@xml/widget_favstations" />
 
         <meta-data android:name="LauncherMetadata.Requirements.Scrollable"
                    android:value="true" />
-		  </receiver>
+      </receiver>
 
     </application>
 </manifest>
