--- a/veliby/src/main/AndroidManifest.xml
+++ b/veliby/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.licryle.veliby"
-    android:versionCode="28"
-    android:versionName="2.0.3" >
+    android:versionCode="29"
+    android:versionName="2.0.4" >
 
   <uses-sdk
       android:minSdkVersion="9"
@@ -25,6 +25,10 @@
   <uses-feature
     android:glEsVersion="0x00020000"
     android:required="true"/>
+
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="false" />
 
   <application
       android:allowBackup="true"
