A first draft of moving Veliby to use POICityMap instead of reinventing the wheel.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,3 @@
 include ':veliby'
-include ':libs:Google-Directions-Android'
+include ':libraries:POICityMap'
+include ':libraries:Google-Directions-Android'
